--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -19,6 +19,7 @@
         android:background="@color/colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:layout_marginBottom="1dp"
+        android:elevation="4dp"
         android:layout_height="wrap_content"/>
     <ProgressBar
         android:id="@+id/progressBar"
