--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android2="http://schemas.android.com/apk/res-auto"
+    >
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logout"
         android:orderInCategory="100"
-        android:title="Logout"
-        app:showAsAction="never" />
+        android:icon="@drawable/logout"
+        android2:showAsAction="always"
+        android:title="Logout" />
 
 </menu>
